// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full rcx-css-9qykgs"
    >
      <header
        class="rcx-box rcx-box--full rcx-css-1ajy6ye"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-y0zm3a"
        >
          <h1
            class="rcx-box rcx-box--full rcx-css-19z81xy"
          >
            Feature preview
          </h1>
        </div>
      </header>
      <div
        class="rcx-box rcx-box--full rcx-css-1svuzur"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-1pd039f rcx-css-1cb6i7s"
          data-overlayscrollbars="host"
        >
          <div
            class="os-size-observer"
          >
            <div
              class="os-size-observer-listener"
            />
          </div>
          <div
            class=""
            data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden"
            style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px); padding: 0px 0px 0px 0px;"
            tabindex="-1"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1vwyls7"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-a05vrv"
              >
                <div
                  class="rcx-box rcx-box--full"
                >
                  <div
                    class="rcx-box rcx-box--full rcx-css-xyfnrl rcx-css-309749"
                  >
                    Welcome to the features preview page! Here, you can enable the latest cutting-edge features that are currently under development and not yet officially released.
                  </div>
                  <section
                    class="rcx-box rcx-box--full rcx-callout rcx-css-xyfnrl rcx-css-6jv9ad"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon rcx-callout__icon rcx-css-4pvxx3"
                    >
                      
                    </i>
                    <div
                      class="rcx-box rcx-box--full rcx-callout__wrapper"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-callout__wrapper-content"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-callout__content"
                        >
                          Feature previews are being tested and may not work as expected.
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-box--animated rcx-accordion"
                >
                  <section
                    class="rcx-box rcx-box--full rcx-accordion-item"
                  >
                    <div
                      aria-controls="_r_1_"
                      aria-expanded="true"
                      class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__bar"
                      role="button"
                      tabindex="0"
                    >
                      <h2
                        class="rcx-box rcx-box--full rcx-accordion-item__title"
                        id="_r_0_"
                      >
                        Navigation
                      </h2>
                      <span
                        class="rcx-box rcx-box--full rcx-chevron--up rcx-chevron"
                      >
                        <i
                          aria-hidden="true"
                          class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-f8dsuo"
                        >
                          
                        </i>
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__panel rcx-accordion-item__panel--expanded"
                      id="_r_1_"
                    >
                      <fieldset
                        class="rcx-box rcx-box--full rcx-field-group"
                        role="group"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                        >
                          <span
                            class="rcx-box rcx-box--full rcx-field__row"
                          >
                            <label
                              class="rcx-box rcx-box--full rcx-field__label rcx-label"
                              for="secondarySidebar"
                            >
                              Filters and secondary sidebar
                            </label>
                            <label
                              class="rcx-box rcx-box--full rcx-toggle-switch"
                            >
                              <input
                                checked=""
                                class="rcx-box rcx-box--full rcx-toggle-switch__input"
                                id="secondarySidebar"
                                name="secondarySidebar"
                                type="checkbox"
                              />
                              <i
                                aria-hidden="true"
                                class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                              />
                            </label>
                          </span>
                          <span
                            class="rcx-box rcx-box--full rcx-field__hint rcx-css-9o2t94"
                          >
                            Stay on top of important conversations.
                          </span>
                        </div>
                        <div
                          class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                        >
                          <span
                            class="rcx-box rcx-box--full rcx-field__row"
                          >
                            <label
                              class="rcx-box rcx-box--full rcx-field__label rcx-label"
                              for="sidebarRail"
                            >
                              Sidebar rail
                            </label>
                            <label
                              class="rcx-box rcx-box--full rcx-toggle-switch"
                            >
                              <input
                                class="rcx-box rcx-box--full rcx-toggle-switch__input"
                                disabled=""
                                id="sidebarRail"
                                name="sidebarRail"
                                type="checkbox"
                              />
                              <i
                                aria-hidden="true"
                                class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                              />
                            </label>
                          </span>
                          <span
                            class="rcx-box rcx-box--full rcx-field__hint rcx-css-9o2t94"
                          >
                            A compact sidebar.
                          </span>
                        </div>
                      </fieldset>
                    </div>
                  </section>
                  <section
                    class="rcx-box rcx-box--full rcx-accordion-item"
                  >
                    <div
                      aria-controls="_r_3_"
                      aria-expanded="false"
                      class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__bar"
                      role="button"
                      tabindex="0"
                    >
                      <h2
                        class="rcx-box rcx-box--full rcx-accordion-item__title"
                        id="_r_2_"
                      >
                        Room
                      </h2>
                      <span
                        class="rcx-box rcx-box--full rcx-chevron"
                      >
                        <i
                          aria-hidden="true"
                          class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-f8dsuo"
                        >
                          
                        </i>
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__panel"
                      id="_r_3_"
                    >
                      <fieldset
                        class="rcx-box rcx-box--full rcx-field-group"
                        role="group"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                        >
                          <span
                            class="rcx-box rcx-box--full rcx-field__row"
                          >
                            <label
                              class="rcx-box rcx-box--full rcx-field__label rcx-label"
                              for="roomToolboxLayout"
                            >
                              Room toolbox layout
                            </label>
                            <label
                              class="rcx-box rcx-box--full rcx-toggle-switch"
                            >
                              <input
                                class="rcx-box rcx-box--full rcx-toggle-switch__input"
                                id="roomToolboxLayout"
                                name="roomToolboxLayout"
                                type="checkbox"
                              />
                              <i
                                aria-hidden="true"
                                class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                              />
                            </label>
                          </span>
                          <span
                            class="rcx-box rcx-box--full rcx-field__hint rcx-css-9o2t94"
                          >
                            A new layout for the room toolbox.
                          </span>
                        </div>
                      </fieldset>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-horizontal os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-vertical os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders NoFeatures without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full rcx-css-9qykgs"
    >
      <header
        class="rcx-box rcx-box--full rcx-css-1ajy6ye"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-y0zm3a"
        >
          <h1
            class="rcx-box rcx-box--full rcx-css-19z81xy"
          >
            Feature preview
          </h1>
        </div>
      </header>
      <div
        class="rcx-box rcx-box--full rcx-css-1svuzur"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-1pd039f rcx-css-1cb6i7s"
          data-overlayscrollbars="host"
        >
          <div
            class="os-size-observer"
          >
            <div
              class="os-size-observer-listener"
            />
          </div>
          <div
            class=""
            data-overlayscrollbars-viewport="scrollbarHidden overflowXHidden overflowYHidden"
            style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px); padding: 0px 0px 0px 0px;"
            tabindex="-1"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1vwyls7"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-a05vrv"
              >
                <div
                  class="rcx-states"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-states__icon rcx-icon--name-magnifier rcx-icon rcx-css-d884y5"
                  >
                    
                  </i>
                  <h3
                    class="rcx-states__title"
                  >
                    No feature to preview
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-horizontal os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
          <div
            class="os-scrollbar os-scrollbar-vertical os-theme-dark os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
            style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
          >
            <div
              class="os-scrollbar-track"
            >
              <div
                class="os-scrollbar-handle"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
